Fix bad spacing between article tags
Made some general clean ups as well

--- a/app/components/Tags/Tag.css
+++ b/app/components/Tags/Tag.css
@@ -1,12 +1,5 @@
 /* stylelint-disable indentation */
 
-.tags {
-  margin: 20px 0;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 7px;
-}
-
 .linkSpacing {
   display: inline-flex;
 }
